[package]
name = "serde_json_path_to_error"
version = "0.1.4"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
A drop in replacement for serde_json where detailed errors are the default
"""
keywords = ["serde", "json", "serialization"]
documentation = "https://docs.rs/serde_json_path_to_error/"
repository = "https://github.com/eopb/serde_json_path_to_error"
edition = "2021"
rust-version = "1.56"
exclude = [".github"]


[features]

# We currently don't forward any features to serde_json or serde_path_to_error.
# I'm happy to accept PRs that add support for that.

[dependencies]
serde = "1.0.188"
serde_json = "1.0.107"
serde_path_to_error = "0.1.14"


[dev-dependencies]
serde = { version = "1.0.188", features = ["derive"] }
